# groupStudies

./: .gitignore  COMPREHENSIVE_E2E_ORAN_OPEN5GS_RUNBOOK.md  E2E_5G_ORAN_SETUP.md  Troubleshooting.md  _Setup Guide srsRAN + OpenWrt.md  gnb_zmq.yaml  openwrt_ue_setup.md  testbedOverallguide  ue_zmq.conf
open5gs/configs/open5gs/: amf.yaml.in
open5gs/webui/: .env
open5gs_kpi_app/: README.md  app.py
openwrt_open5gs_kpi_app/: .env  .env.example  .pre-commit-config.yaml  README.md  TROUBLESHOOTING.md  app.py  pyproject.toml  requirements.txt  troubleshooting.md
openwrt_open5gs_kpi_app/services/: config.py  host.py  network.py  openwrt.py  output.py  prometheus.py  runtime.py  server.py  snapshot.py
openwrt_open5gs_kpi_app/tests/: __init__.py  test_app.py
scripts/: follow_e2e_5g_oran_guide.sh  open5gs_recover_and_test.sh  toggle_route.sh
